--- a/ElevatorKata01/ElevatorKata02.csproj
+++ b/ElevatorKata01/ElevatorKata02.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>ElevatorKata02</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">.\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -53,8 +55,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Call.cs" />
+    <Compile Include="ILiftEventGenerator.cs" />
     <Compile Include="ILiftMonitor.cs" />
     <Compile Include="ILiftEvent.cs" />
+    <Compile Include="LiftCall.cs" />
+    <Compile Include="LiftEngineDownwardsEvent.cs" />
+    <Compile Include="LiftEngineUpwardsEvent.cs" />
+    <Compile Include="LiftEventGenerator.cs" />
+    <Compile Include="LiftMoveRequest.cs" />
     <Compile Include="LiftSpares.cs" />
     <Compile Include="LiftStatus.cs" />
     <Compile Include="Direction.cs" />
@@ -72,6 +80,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
