Added new acceptance tests (test scheduler not working yet)

--- a/ElevatorKata01/ElevatorKata02.csproj
+++ b/ElevatorKata01/ElevatorKata02.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcceptanceTests.cs" />
     <Compile Include="Call.cs" />
     <Compile Include="ILiftEventGenerator.cs" />
     <Compile Include="ILiftMonitor.cs" />
